--- a/pax-cdi-itest-weld/pom.xml
+++ b/pax-cdi-itest-weld/pom.xml
@@ -244,6 +244,12 @@
             <scope>provided</scope>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.xbean</groupId>
+            <artifactId>xbean-finder</artifactId>
+            <scope>provided</scope>
+        </dependency>
+
     </dependencies>
 
     <build>
