--- a/pax-cdi-parent/pom.xml
+++ b/pax-cdi-parent/pom.xml
@@ -19,10 +19,11 @@
         <pax.exam.version>3.0.0.RC1</pax.exam.version>
         <pax.swissbox.version>1.6.0</pax.swissbox.version>
         <pax.url.version>1.5.0</pax.url.version>
-        <pax.web.version>3.0.0.M1</pax.web.version>
+        <pax.web.version>3.0.0.M2</pax.web.version>
         <slf4j.version>1.6.4</slf4j.version>
         <pax.cdi.wiki.url>http://team.ops4j.org/wiki/display/paxcdi/</pax.cdi.wiki.url>
         <weld.version>1.2.0.Beta1</weld.version>
+        <xbean.version>3.12</xbean.version>
     </properties>
 
     <dependencyManagement>
@@ -181,7 +182,13 @@
             <dependency>
                 <groupId>org.apache.xbean</groupId>
                 <artifactId>xbean-bundleutils</artifactId>
-                <version>3.11.1</version>
+                <version>${xbean.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.apache.xbean</groupId>
+                <artifactId>xbean-finder</artifactId>
+                <version>${xbean.version}</version>
             </dependency>
 
             <dependency>
