[PAXCDI-44] Use generic capabilities / features for CDI extensions

--- a/pax-cdi-extension/pom.xml
+++ b/pax-cdi-extension/pom.xml
@@ -69,6 +69,9 @@
                 <configuration>
                     <instructions>
                         <Bundle-SymbolicName>${bundle.symbolicName}</Bundle-SymbolicName>
+                        <Provide-Capability>
+                            org.ops4j.pax.cdi.extension; extension=pax-cdi-extension; version:Version=${version;====;${replace;${project.version};-;.}}
+                        </Provide-Capability>
                     </instructions>
                 </configuration>
             </plugin>
