--- a/pax-cdi-extender/pom.xml
+++ b/pax-cdi-extender/pom.xml
@@ -77,7 +77,7 @@
                 <configuration>
                     <instructions>
                         <Bundle-SymbolicName>${bundle.symbolicName}</Bundle-SymbolicName>
-                        <Bundle-Activator>${bundle.namespace}.impl.Activator</Bundle-Activator>
+                        <Bundle-Activator>${bundle.namespace}.impl.CdiExtender</Bundle-Activator>
                     </instructions>
                 </configuration>
             </plugin>
