[PAXCDI-45] Add a karaf features file

--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,7 @@
         <module>pax-cdi-web</module>
         <module>pax-cdi-web-weld</module>
         <module>pax-cdi-web-openwebbeans</module>
+        <module>pax-cdi-features</module>
     </modules>
 
     <profiles>
