[PAXCDI-47] Use the extender generic capability to opt-in CDI bundles
Also find transitive extensions and scan all extensions for beans.xml descriptors

--- a/pax-cdi-extender/pom.xml
+++ b/pax-cdi-extender/pom.xml
@@ -78,6 +78,9 @@
                     <instructions>
                         <Bundle-SymbolicName>${bundle.symbolicName}</Bundle-SymbolicName>
                         <Bundle-Activator>${bundle.namespace}.impl.CdiExtender</Bundle-Activator>
+                        <Provide-Capability>
+                            osgi.extender; osgi.extender="pax.cdi"
+                        </Provide-Capability>
                     </instructions>
                 </configuration>
             </plugin>
