--- a/pax-cdi-samples/pax-cdi-sample2-service/pom.xml
+++ b/pax-cdi-samples/pax-cdi-sample2-service/pom.xml
@@ -73,7 +73,10 @@
                 <configuration>
                     <instructions>
                         <Bundle-SymbolicName>org.ops4j.pax.cdi.sample2.service</Bundle-SymbolicName>
-                        <Pax-ManagedBeans>META-INF/beans.xml</Pax-ManagedBeans>
+                        <Require-Capability>
+                            org.ops4j.pax.cdi.extension; filter:="(&amp;(extension=pax-cdi-extension)(version>=${version;==;${pax.cdi.osgi.version.clean}})(!(version>=${version;=+;${pax.cdi.osgi.version.clean}})))",
+                            osgi.extender; filter:="(osgi.extender=pax.cdi)"
+                        </Require-Capability>
                         <Import-Package>org.apache.deltaspike.jpa.impl.transaction, org.apache.deltaspike.jpa.impl.transaction.context, *</Import-Package>
                     </instructions>
                 </configuration>
