--- a/tck/pax-cdi-tck-porting/pom.xml
+++ b/tck/pax-cdi-tck-porting/pom.xml
@@ -29,6 +29,12 @@
     <dependencies>
 
         <dependency>
+            <groupId>org.ops4j.pax.cdi</groupId>
+            <artifactId>pax-cdi-api</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.ops4j.pax.exam</groupId>
             <artifactId>pax-exam-container-native</artifactId>
         </dependency>
