--- a/pax-cdi-weld/pom.xml
+++ b/pax-cdi-weld/pom.xml
@@ -80,7 +80,7 @@
                 <configuration>
                     <instructions>
                         <Bundle-SymbolicName>${bundle.symbolicName}</Bundle-SymbolicName>
-                        <Bundle-Activator>${bundle.namespace}.impl.Activator</Bundle-Activator>
+                        <Service-Component>OSGI-INF/*</Service-Component>
                         <Import-Package>org.jboss.weld.bootstrap, *</Import-Package>
                     </instructions>
                 </configuration>
