[PAXCDI-48] Use Declarative Services to simplify service tracking simplified web adapters

--- a/pax-cdi-web-openwebbeans/pom.xml
+++ b/pax-cdi-web-openwebbeans/pom.xml
@@ -83,7 +83,7 @@
                 <configuration>
                     <instructions>
                         <Bundle-SymbolicName>${bundle.symbolicName}</Bundle-SymbolicName>
-                        <Bundle-Activator>${bundle.namespace}.impl.Activator</Bundle-Activator>
+                        <Service-Component>OSGI-INF/*</Service-Component>
                     </instructions>
                 </configuration>
             </plugin>
