[PAXCDI-56] regression test

--- a/pax-cdi-samples/pom.xml
+++ b/pax-cdi-samples/pom.xml
@@ -16,6 +16,8 @@
         <module>pax-cdi-sample1-client</module>
         <module>pax-cdi-sample1-web</module>
         <module>pax-cdi-jetty-weld-war</module>
+        <module>pax-cdi-sample3</module>
+        <module>pax-cdi-sample3-client</module>
     </modules>
 
     <profiles>
