--- a/pax-cdi-samples/pax-cdi-sample1-client/pom.xml
+++ b/pax-cdi-samples/pax-cdi-sample1-client/pom.xml
@@ -51,6 +51,9 @@
                 <configuration>
                     <instructions>
                         <Bundle-SymbolicName>org.ops4j.pax.cdi.sample1.client</Bundle-SymbolicName>
+                        <!-- intentionally do not use the Import-Package default to have a test case for Require-Bundle -->
+                        <Require-Bundle>org.ops4j.pax.cdi.sample1</Require-Bundle>
+                        <Import-Package>!org.ops4j.pax.cdi.sample1, *</Import-Package>
                         <Require-Capability>
                             org.ops4j.pax.cdi.extension; filter:="(&amp;(extension=pax-cdi-extension)(version>=${version;==;${pax.cdi.osgi.version.clean}})(!(version>=${version;=+;${pax.cdi.osgi.version.clean}})))",
                             osgi.extender; filter:="(osgi.extender=pax.cdi)"
