[PAXCDI-57] Optimize proxy weaving hook

--- a/pax-cdi-openwebbeans/pom.xml
+++ b/pax-cdi-openwebbeans/pom.xml
@@ -75,6 +75,7 @@
                 <configuration>
                     <instructions>
                         <Bundle-SymbolicName>${bundle.symbolicName}</Bundle-SymbolicName>
+                        <Bundle-Activator>${bundle.namespace}.impl.Activator</Bundle-Activator>
                         <Service-Component>OSGI-INF/*</Service-Component>
                         <Import-Package>
                             javassist.util.proxy,
