--- a/pax-cdi-checkstyle-rules/pom.xml
+++ b/pax-cdi-checkstyle-rules/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>org.ops4j.pax</groupId>
     <artifactId>cdi</artifactId>
-    <version>0.4.0</version>    
+    <version>0.5.0-SNAPSHOT</version>    
   </parent>
   <groupId>org.ops4j.pax.cdi</groupId>
   <artifactId>pax-cdi-checkstyle-rules</artifactId>
