[PAXCDI-60] Upgrade and adapt to OpenWebBeans 1.2.0

--- a/pax-cdi-itest/pom.xml
+++ b/pax-cdi-itest/pom.xml
@@ -99,12 +99,6 @@
         </dependency>
 
         <dependency>
-            <groupId>org.apache.servicemix.bundles</groupId>
-            <artifactId>org.apache.servicemix.bundles.asm</artifactId>
-            <scope>provided</scope>
-        </dependency>
-
-        <dependency>
             <groupId>org.ops4j.pax.exam</groupId>
             <artifactId>pax-exam-junit4</artifactId>
             <scope>test</scope>
@@ -232,8 +226,9 @@
         </dependency>
 
         <dependency>
-            <groupId>org.apache.servicemix.bundles</groupId>
-            <artifactId>org.apache.servicemix.bundles.javassist</artifactId>
+            <groupId>org.apache.xbean</groupId>
+            <artifactId>xbean-asm-shaded</artifactId>
+            <version>3.13</version>
             <scope>provided</scope>
         </dependency>
 
