--- a/pax-cdi-parent/pom.xml
+++ b/pax-cdi-parent/pom.xml
@@ -15,7 +15,7 @@
     <properties>
         <jersey.version>1.13</jersey.version>
         <logback.version>1.0.0</logback.version>
-        <openwebbeans.version>1.1.8</openwebbeans.version>
+        <openwebbeans.version>1.2.0-SNAPSHOT</openwebbeans.version>
         <ops4j.base.version>1.4.0</ops4j.base.version>
         <pax.exam.version>3.0.3</pax.exam.version>
         <pax.swissbox.version>1.6.0</pax.swissbox.version>
