--- a/tck/pom.xml
+++ b/tck/pom.xml
@@ -3,13 +3,18 @@
   <parent>
     <groupId>org.ops4j.pax.cdi</groupId>
     <artifactId>pax-cdi-parent</artifactId>
-    <version>0.4.0-SNAPSHOT</version>
+    <version>0.5.0-SNAPSHOT</version>
     <relativePath>../pax-cdi-parent/</relativePath>
   </parent>
   <artifactId>tck</artifactId>
   <packaging>pom</packaging>
   <modules>
+  <!-- 
       <module>pax-cdi-tck-porting</module>
       <module>pax-cdi-tck-runner</module>
+  -->    
+      <module>pax-cdi-arquillian</module>
+      <module>pax-cdi-tck11-porting</module>
+      <module>pax-cdi-tck11-runner</module>
   </modules>
 </project>
