--- a/tck/pom.xml
+++ b/tck/pom.xml
@@ -1,20 +1,23 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <parent>
-    <groupId>org.ops4j.pax.cdi</groupId>
-    <artifactId>pax-cdi-parent</artifactId>
-    <version>0.5.0-SNAPSHOT</version>
-    <relativePath>../pax-cdi-parent/</relativePath>
-  </parent>
-  <artifactId>tck</artifactId>
-  <packaging>pom</packaging>
-  <modules>
-  <!-- 
-      <module>pax-cdi-tck-porting</module>
-      <module>pax-cdi-tck-runner</module>
-  -->    
-      <module>pax-cdi-arquillian</module>
-      <module>pax-cdi-tck11-porting</module>
-      <module>pax-cdi-tck11-runner</module>
-  </modules>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<parent>
+		<groupId>org.ops4j.pax.cdi</groupId>
+		<artifactId>pax-cdi-parent</artifactId>
+		<version>0.5.0-SNAPSHOT</version>
+		<relativePath>../pax-cdi-parent/</relativePath>
+	</parent>
+	<artifactId>tck</artifactId>
+	<packaging>pom</packaging>
+
+	<properties>
+		<arquillian.version>1.0.3.Final</arquillian.version>
+		<cdi.tck.version>1.1.0.Final</cdi.tck.version>
+	</properties>
+
+	<modules>
+		<module>pax-cdi-arquillian</module>
+		<module>pax-cdi-tck11-porting</module>
+		<module>pax-cdi-tck11-runner</module>
+	</modules>
 </project>
