--- a/tck/pax-cdi-tck11-runner/pom.xml
+++ b/tck/pax-cdi-tck11-runner/pom.xml
@@ -176,11 +176,13 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.14.1</version>
 				<configuration>
 					<useManifestOnlyJar>false</useManifestOnlyJar>
 					<argLine>-ea -XX:MaxPermSize=256m</argLine>
 					<!-- use chunked suites and fork always to avoid PermGen exceptions -->
 					<forkMode>always</forkMode>
+					
 					<suiteXmlFiles>
 						<suiteXmlFile>definition.xml</suiteXmlFile>
 					</suiteXmlFiles>
