Revert "Merge branch 'master' of github.com:ops4j/org.ops4j.pax.cdi"
This reverts commit af8dca0877bf14cdef342d5341c48e28c4264097, reversing
changes made to a6f886d44787e1a79bc36b40b26a5ab4c843dacc.

--- a/pax-cdi-itest/pom.xml
+++ b/pax-cdi-itest/pom.xml
@@ -99,6 +99,12 @@
         </dependency>
 
         <dependency>
+            <groupId>org.apache.servicemix.bundles</groupId>
+            <artifactId>org.apache.servicemix.bundles.asm</artifactId>
+            <scope>provided</scope>
+        </dependency>
+
+        <dependency>
             <groupId>org.ops4j.pax.exam</groupId>
             <artifactId>pax-exam-junit4</artifactId>
             <scope>test</scope>
@@ -226,9 +232,8 @@
         </dependency>
 
         <dependency>
-            <groupId>org.apache.xbean</groupId>
-            <artifactId>xbean-asm-shaded</artifactId>
-            <version>3.13</version>
+            <groupId>org.apache.servicemix.bundles</groupId>
+            <artifactId>org.apache.servicemix.bundles.javassist</artifactId>
             <scope>provided</scope>
         </dependency>
 
