--- a/pax-cdi-web-openwebbeans/src/main/resources/META-INF/openwebbeans/wab.properties
+++ b/pax-cdi-web-openwebbeans/src/main/resources/META-INF/openwebbeans/wab.properties
@@ -33,7 +33,7 @@ org.apache.webbeans.spi.ScannerService=org.ops4j.pax.cdi.openwebbeans.impl.Bundl
 
 ################################### Default EL Adaptor ####################################
 #Default implementation of org.apache.webbeans.spi.adaptor.ELAdaptor
-org.apache.webbeans.spi.adaptor.ELAdaptor=org.apache.webbeans.el22.EL22Adaptor
+org.apache.webbeans.spi.adaptor.ELAdaptor=org.apache.webbeans.el.el22.EL22Adaptor
 ################################################################################################
 
 ################################### Default Contexts Service ####################################
