--- a/tck/pax-cdi-tck11-runner/src/test/resources/META-INF/cdi-tck.properties
+++ b/tck/pax-cdi-tck11-runner/src/test/resources/META-INF/cdi-tck.properties
@@ -1,6 +1,6 @@
 # CDI TCK configuration to run test from IDE
 # Alter the path accordingly (absolute or relative from the tck/impl dir)
-org.jboss.cdi.tck.libraryDirectory=/home/hwellmann/tmp/org.ops4j.pax.cdi/tck/pax-cdi-tck11-runner/target/dependency/lib/
+org.jboss.cdi.tck.libraryDirectory=target/dependency/lib/
 # JNDI DS
 org.jboss.cdi.tck.testDataSource=java:jboss/datasources/ExampleDS
 # JNDI JMS
