--- a/pax-cdi-parent/pom.xml
+++ b/pax-cdi-parent/pom.xml
@@ -16,13 +16,14 @@
     <properties>
         <jersey.version>1.13</jersey.version>
         <logback.version>1.0.0</logback.version>
-        <openwebbeans.version>1.2.1-SNAPSHOT</openwebbeans.version>
+        <openwebbeans.version>1.2.0</openwebbeans.version>
         <ops4j.base.version>1.4.0</ops4j.base.version>
         <pax.exam.version>3.0.3</pax.exam.version>
         <pax.swissbox.version>1.6.0</pax.swissbox.version>
         <pax.url.version>1.5.0</pax.url.version>
         <pax.web.version>3.0.0.RC</pax.web.version>
         <slf4j.version>1.6.4</slf4j.version>
+        <spring.version>3.2.2.RELEASE</spring.version>
         <pax.cdi.wiki.url>http://team.ops4j.org/wiki/display/paxcdi/</pax.cdi.wiki.url>
         <weld.version>1.2.0.Beta1</weld.version>
         <xbean.version>3.12</xbean.version>
@@ -346,18 +347,5 @@
             <timezone>UTC+1</timezone>
         </developer>
     </developers>
-
-    <repositories>
-        <repository>
-            <id>apache-snapshots</id>
-            <url>https://repository.apache.org/content/groups/snapshots</url>
-            <releases>
-                <enabled>false</enabled>
-            </releases>
-            <snapshots>
-                <enabled>true</enabled>
-            </snapshots>
-        </repository>
-    </repositories>
 
 </project>
