--- a/pax-cdi-parent/pom.xml
+++ b/pax-cdi-parent/pom.xml
@@ -25,6 +25,7 @@
         <slf4j.version>1.6.4</slf4j.version>
         <spring.version>3.2.2.RELEASE</spring.version>
         <pax.cdi.wiki.url>http://team.ops4j.org/wiki/display/paxcdi/</pax.cdi.wiki.url>
+        <weld.api.version>1.2.0.Beta1</weld.api.version>
         <weld.version>1.2.0.Beta1</weld.version>
         <xbean.version>3.12</xbean.version>
     </properties>
@@ -258,7 +259,7 @@
             <dependency>
                 <groupId>org.jboss.weld</groupId>
                 <artifactId>weld-api</artifactId>
-                <version>${weld.version}</version>
+                <version>${weld.api.version}</version>
             </dependency>
 
         </dependencies>
