--- a/pax-cdi-extension/pom.xml
+++ b/pax-cdi-extension/pom.xml
@@ -72,7 +72,7 @@
                     <instructions>
                         <Bundle-SymbolicName>${bundle.symbolicName}</Bundle-SymbolicName>
                         <Provide-Capability>
-                            org.ops4j.pax.cdi.extension; extension=pax-cdi-extension; version:Version=${version;====;${replace;${project.version};-;.}}
+                            osgi.cdi.extension; osgi.cdi.extension=pax-cdi-extension; version:Version=${version;====;${replace;${project.version};-;.}}
                         </Provide-Capability>
                         <DynamicImport-Package>org.apache.webbeans.*</DynamicImport-Package>
                     </instructions>
