--- a/pax-cdi-samples/pax-cdi-sample1-client/pom.xml
+++ b/pax-cdi-samples/pax-cdi-sample1-client/pom.xml
@@ -55,8 +55,7 @@
                         <Require-Bundle>org.ops4j.pax.cdi.sample1</Require-Bundle>
                         <Import-Package>!org.ops4j.pax.cdi.sample1, *</Import-Package>
                         <Require-Capability>
-                            org.ops4j.pax.cdi.extension; filter:="(&amp;(extension=pax-cdi-extension)(version&gt;=${version;==;${pax.cdi.osgi.version.clean}})(!(version&gt;=${version;=+;${pax.cdi.osgi.version.clean}})))",
-                            osgi.extender; filter:="(osgi.extender=pax.cdi)"
+                            osgi.extender; filter:="(osgi.extender=osgi.cdi)"
                         </Require-Capability>
                     </instructions>
                 </configuration>
