--- a/pax-cdi-extension/pom.xml
+++ b/pax-cdi-extension/pom.xml
@@ -2,7 +2,7 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>org.ops4j.pax.cdi</groupId>
-        <version>0.5.0-SNAPSHOT</version>
+        <version>0.5.0.ri-SNAPSHOT</version>
         <artifactId>pax-cdi-parent</artifactId>
         <relativePath>../pax-cdi-parent</relativePath>
     </parent>
@@ -72,7 +72,7 @@
                     <instructions>
                         <Bundle-SymbolicName>${bundle.symbolicName}</Bundle-SymbolicName>
                         <Provide-Capability>
-                            osgi.cdi.extension; osgi.cdi.extension=pax-cdi-extension; version:Version=${version;====;${replace;${project.version};-;.}}
+                            osgi.cdi.extension; osgi.cdi.extension=pax-cdi-extension; version:Version=${version;====;${project.version}}
                         </Provide-Capability>
                         <DynamicImport-Package>org.apache.webbeans.*</DynamicImport-Package>
                     </instructions>
