--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.ops4j.pax</groupId>
     <artifactId>cdi</artifactId>
-    <version>0.5.0-SNAPSHOT</version>
+    <version>0.5.0.ri-SNAPSHOT</version>
     <packaging>pom</packaging>
     <parent>
         <groupId>org.ops4j</groupId>
