--- a/tck/pax-cdi-arquillian/pom.xml
+++ b/tck/pax-cdi-arquillian/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>org.ops4j.pax.cdi</groupId>
 		<artifactId>tck</artifactId>
-		<version>0.5.0-SNAPSHOT</version>
+		<version>0.5.0.ri-SNAPSHOT</version>
 	</parent>
 
 	<groupId>org.ops4j.pax.cdi.tck</groupId>
