[PAXCDI-64] Wire to javax.annotation 1.1 or higher
Use Java 1.5 SE profile and add required system packages to avoid
that javax.annotation is loaded from the system bundle

--- a/pax-cdi-samples/pax-cdi-sample1-web/pom.xml
+++ b/pax-cdi-samples/pax-cdi-sample1-web/pom.xml
@@ -12,21 +12,31 @@
     <name>OPS4J Pax CDI Sample1 WAB</name>
 
     <dependencies>
+
         <dependency>
             <groupId>org.apache.geronimo.specs</groupId>
             <artifactId>geronimo-jcdi_1.0_spec</artifactId>
             <scope>provided</scope>
         </dependency>
+
         <dependency>
             <groupId>org.apache.geronimo.specs</groupId>
             <artifactId>geronimo-atinject_1.0_spec</artifactId>
             <scope>provided</scope>
         </dependency>
+
+        <dependency>
+            <groupId>org.apache.geronimo.specs</groupId>
+            <artifactId>geronimo-annotation_1.1_spec</artifactId>
+            <scope>provided</scope>
+        </dependency>
+
         <dependency>
             <groupId>org.apache.geronimo.specs</groupId>
             <artifactId>geronimo-servlet_3.0_spec</artifactId>
             <scope>provided</scope>
         </dependency>
+
     </dependencies>
 
     <build>
