--- a/pax-cdi-extension/pom.xml
+++ b/pax-cdi-extension/pom.xml
@@ -61,6 +61,13 @@
             <artifactId>geronimo-atinject_1.0_spec</artifactId>
             <scope>provided</scope>        
         </dependency>
+
+        <dependency>
+            <groupId>org.apache.geronimo.specs</groupId>
+            <artifactId>geronimo-annotation_1.1_spec</artifactId>
+            <scope>provided</scope>
+        </dependency>
+
     </dependencies>
     
     <build>
