[PAXCDI-65] Support Weld 2.1.x (CDI 1.1)

--- a/pax-cdi-itest/pom.xml
+++ b/pax-cdi-itest/pom.xml
@@ -313,10 +313,52 @@
                     <artifactId>weld-osgi-bundle</artifactId>
                     <scope>provided</scope>
                 </dependency>
-
-
-
             </dependencies>
+        </profile>
+
+        <profile>
+            <id>weld2</id>
+            <activation>
+                <activeByDefault>false</activeByDefault>
+            </activation>
+            <properties>
+                <pax.cdi.provider>weld2</pax.cdi.provider>
+            </properties>
+            <dependencies>
+
+                <dependency>
+                    <groupId>org.ops4j.pax.cdi</groupId>
+                    <artifactId>pax-cdi-web-weld</artifactId>
+                    <version>${project.version}</version>
+                    <scope>provided</scope>
+                </dependency>
+
+                <dependency>
+                    <groupId>org.apache.servicemix.bundles</groupId>
+                    <artifactId>org.apache.servicemix.bundles.asm</artifactId>
+                    <scope>provided</scope>
+                </dependency>
+
+                <dependency>
+                    <groupId>org.jboss.weld</groupId>
+                    <artifactId>weld-osgi-bundle</artifactId>
+                    <version>2.1.0.Alpha1</version>
+                    <scope>provided</scope>
+                </dependency>
+            </dependencies>
+
+            <repositories>
+                <repository>
+                    <id>jboss-staging-repository</id>
+                    <url>https://repository.jboss.org/nexus/content/groups/staging/</url>
+                    <releases>
+                        <enabled>true</enabled>
+                    </releases>
+                    <snapshots>
+                        <enabled>false</enabled>
+                    </snapshots>
+                </repository>
+            </repositories>
         </profile>
     </profiles>
 
