[PAXCDI-7] renamed module in parent POM

--- a/pom.xml
+++ b/pom.xml
@@ -30,15 +30,15 @@
 
 
         <module>pax-cdi-samples</module>
-        <module>pax-cdi-itest</module>
         <module>pax-cdi-extension</module>
         <module>pax-cdi-api</module>
         <module>pax-cdi-weld</module>
-        <module>pax-cdi-itest-weld</module>
         <module>pax-cdi-web</module>
         <module>pax-cdi-web-weld</module>
         <module>pax-cdi-web-openwebbeans</module>
         <module>pax-cdi-features</module>
+        
+        <module>itest</module>
     </modules>
 
     <profiles>
