--- a/pom.xml
+++ b/pom.xml
@@ -37,11 +37,15 @@
         <module>pax-cdi-web-weld</module>
         <module>pax-cdi-web-openwebbeans</module>
         <module>pax-cdi-features</module>
-        
-        <module>itest</module>
     </modules>
 
     <profiles>
+        <profile>
+            <id>itest</id>
+            <modules>
+                <module>itest</module>
+            </modules>
+        </profile>
         <profile>
             <id>experimental</id>
             <modules>
