--- a/itest/src/it/itest-cdi10/pom.xml
+++ b/itest/src/it/itest-cdi10/pom.xml
@@ -365,23 +365,11 @@
                 <dependency>
                     <groupId>org.jboss.weld</groupId>
                     <artifactId>weld-osgi-bundle</artifactId>
-                    <version>2.1.0.Alpha1</version>
+                    <version>2.1.0.Beta1</version>
                     <scope>provided</scope>
                 </dependency>
-            </dependencies>
-
-            <repositories>
-                <repository>
-                    <id>jboss-staging-repository</id>
-                    <url>https://repository.jboss.org/nexus/content/groups/staging/</url>
-                    <releases>
-                        <enabled>true</enabled>
-                    </releases>
-                    <snapshots>
-                        <enabled>false</enabled>
-                    </snapshots>
-                </repository>
-            </repositories>
+            
+            </dependencies>            
         </profile>
     </profiles>
     
