--- a/pax-cdi-samples/pax-cdi-sample2-service/pom.xml
+++ b/pax-cdi-samples/pax-cdi-sample2-service/pom.xml
@@ -17,13 +17,13 @@
         <dependency>
             <groupId>org.apache.deltaspike.modules</groupId>
             <artifactId>deltaspike-jpa-module-api</artifactId>
-            <version>0.4</version>
+            <version>${deltaspike.version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.apache.deltaspike.modules</groupId>
             <artifactId>deltaspike-jpa-module-impl</artifactId>
-            <version>0.4</version>
+            <version>${deltaspike.version}</version>
         </dependency>
 
         <dependency>
@@ -35,7 +35,7 @@
         <dependency>
             <groupId>org.ops4j.pax.jpa.samples</groupId>
             <artifactId>pax-jpa-sample1-model</artifactId>
-            <version>0.1.0-SNAPSHOT</version>
+            <version>${pax.jpa.version}</version>
         </dependency>
 
         <dependency>
@@ -75,11 +75,11 @@
                         <Bundle-SymbolicName>org.ops4j.pax.cdi.sample2.service</Bundle-SymbolicName>
                         <Require-Capability>
                             org.ops4j.pax.cdi.extension; filter:="(&amp;(extension=pax-cdi-extension)(version>=${version;==;${pax.cdi.osgi.version.clean}})(!(version>=${version;=+;${pax.cdi.osgi.version.clean}})))",
-                            org.ops4j.pax.cdi.extension; filter:="(&amp;(extension=deltaspike.jpa))",
+                            org.ops4j.pax.cdi.extension; filter:="(&amp;(extension=deltaspike-jpa-impl))",
                             osgi.extender; filter:="(osgi.extender=pax.cdi)"
                         </Require-Capability>
                         <Require-Bundle>org.apache.deltaspike.modules.deltaspike-jpa-module-impl</Require-Bundle>
-                        <Import-Package>javax.persistence.criteria, javax.persistence.metamodel, org.apache.deltaspike.jpa.impl.transaction, org.apache.deltaspike.jpa.impl.transaction.context, *</Import-Package>
+                        <Import-Package>javax.persistence.criteria, javax.persistence.metamodel, *</Import-Package>
                     </instructions>
                 </configuration>
                 <executions>
